--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -1456,9 +1456,9 @@
     <div class="row">
         <!--여행 몇일차인지-->
         <div class="vh-100 d-flex flex-column bg-light" style="width: 100px;">
-            <a href="*" class="d-block p-3 link-dark text-decoration-none text-center" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Icon-only">
+            <span class="d-block p-3 link-dark text-decoration-none text-center" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Icon-only">
                 일정
-            </a>
+            </span>
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
 
                 <!-- 반복하여 탭 생성 -->
