[수정] fromdate offset 제거

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -897,8 +897,7 @@
     let tabType = "RECOMMEND"; // 화면에 보여줄 탭
     let back = false;
 
-    const time_offset = new Date().getTimezoneOffset() * 60000;
-    let fromDate = new Date(Date.now() - time_offset).toISOString();
+    let fromDate = new Date(Date.now()).toISOString();
 
     $(document).ready(function (){
         /*무한스크롤 & 페이지 로드 설정*/
@@ -982,7 +981,7 @@
         back = false;
         simpleViewSwiper = [];
 
-        fromDate = new Date(Date.now() - time_offset).toISOString()
+        fromDate = new Date(Date.now()).toISOString()
 
         gallery.html("")
         // 옵저버 타겟 관측 시작
