[수정] fromdate offset 제거

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -982,6 +982,7 @@
         simpleViewSwiper = [];
 
         fromDate = new Date(Date.now()).toISOString()
+        console.log('fromdate: ' + fromDate)
 
         gallery.html("")
         // 옵저버 타겟 관측 시작
