--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -415,7 +415,13 @@
     let tabType = ""; // 화면에 보여줄 탭
     let back = false;
 
-    let fromDate = new Date(Date.now()).toISOString();
+    function getNowKoreanTime(){
+        const offset = 1000 * 60 * 60 * 9; // UTC to KTS Offset
+        const kts = new Date(Date.now() + offset);
+        return kts;
+    }
+
+    let fromDate = getNowKoreanTime().toISOString();
 
     let keyword = null;
 
@@ -503,7 +509,7 @@
         back = false;
         simpleViewSwiper = [];
 
-        fromDate = new Date(Date.now()).toISOString()
+        fromDate = getNowKoreanTime().toISOString()
 
         gallery.html("")
         // 옵저버 타겟 관측 시작
