[수정] 관심리뷰 목록 출력 오류 수정

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -2449,7 +2449,7 @@
                         })
                         window.scrollTo({top: loadScroll, behavior: "instant"});
                     }, time)
-                    if(reviewBookList.length < 12){
+                    if(likeReviewList.length < 12){
                         // 다음페이지가 없다면 관측을 종료
                         observer.unobserve(document.getElementById('load-point'));
                     }
